# bibliographer

./: README.md  requirements.txt  setup.cfg
bibliographer/: __init__.py  aggregator.py  citation.py  google_api.py  pmc.py  pubmed.py  scraper.py
bibliographer/server/: app.py  handler.py  uimodules.py
bibliographer/server/static/: citation.css  main.css
bibliographer/server/templates/: citation.html  index.html
resources/: config.yaml  seeds.txt
scripts/: main.py  run_app.py
