[metadata]
name = bibliographer
version = 0.0.1
author = Olivier Teboul
author_email = oteboul@gmail.com
description = "Extracts bibliography from PubMed."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oteboul/bibliographer
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6